[package]
name = "web-distributor"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.1"
clap = { version = "4.5.3", features = ["derive"] }
rpassword = "7.3.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
